<resources>
    <!-- Welcome -->
    <string name="app_name">OneJunk</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="hello">Welcome %1$s!</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Create New Account</string>
    <string name="firestore_button">Launch Firestore Activity</string>

    <!-- New Post strings -->
    <string name="create_new_post_title">Create a New Post</string>
    <string name="title_label">Title:</string>
    <string name="title_hint">What are you selling?</string>
    <string name="description_label">Description: </string>
    <string name="description_hint">Write a description of the item (include condition)</string>
    <string name="price_label">Price: $</string>
    <string name="price_hint">Enter a price in USD</string>
    <string name="submit_button">Publish</string>
    <string name="cancel_button">Cancel</string>
    <string name="created_on">Created on %1$s</string>
    <string name="uploadImage">Upload an image</string>

    <string name="seller_label">Seller: </string>

    <!-- Buttons on activity_detail -->
    <string name="contact_button">Contact Seller</string>
    <string name="edit_button">Edit Post</string>
    <string name="delete_button">Delete Post</string>
    <string name="my_posts">My posts</string>
    <string name="edit_post">Edit Post</string>


</resources>
