<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostActivity"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="24dp">

    <TextView
        android:id="@+id/create_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="64sp"
        android:text="@string/create_new_post_title"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:textSize="36sp"
        android:text="@string/title_label"
        app:layout_constraintTop_toBottomOf="@id/create_post_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/title_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/title_hint"
        android:textSize="24sp"
        android:ems="12"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/title_label"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="36sp"
        android:text="@string/description_label"
        app:layout_constraintTop_toBottomOf="@id/title_in"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/description_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/description_hint"
        android:textSize="24sp"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/description_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="36sp"
        android:text="@string/price_label"
        app:layout_constraintTop_toBottomOf="@id/description_in"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/price_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/price_hint"
        android:textSize="24sp"
        android:ems="8"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/price_label"
        app:layout_constraintLeft_toLeftOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>